@@ -1,4 +1,5 @@
 - Replace public final references in DbxClientV2 and DbxTeamClientV2 with accessor methods.
+- Update longpoll example to workaround connection resets.
 
 ---------------------------------------------
 2.0-beta-7 (2016-02-24)
